Добавил конфиг; исправил сваггер документацию; исправил структуру code_processor
